--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "Alain Gourvès",
     "license": "MIT",
     "devDependencies": {
+        "browser-sync": "^2.26.14",
         "gulp": "^4.0.2",
         "gulp-cli": "^2.3.0",
         "gulp-dart-sass": "^1.0.2",
